--- a/.settings/tasks.json
+++ b/.settings/tasks.json
@@ -8,7 +8,7 @@
 
 // A task runner that calls the Typescipt compiler (tsc) and 
 // Compiles a HelloWorld.ts program
-{
+/*{
 	"version": "0.1.0",
 	
 	// The command is tsc. Assumes that tsc has been installed using npm install -g typescript
@@ -30,8 +30,24 @@
 	// use the standard tsc problem matcher to find compile problems
 	// in the output.
 	"problemMatcher": "$tsc"
-}
+}*/
 
+{
+	"version": "0.1.0",
+	"command": "gulp",
+	"isShellCommand": true,
+	"tasks": [
+		{
+			"taskName": "watch",
+			
+			"isBuildCommand": true,
+			
+			"showOutput": "always",
+			
+			"problemMatcher": "$tsc"
+		}
+	]
+}
 // A task runner that calls the Typescipt compiler (tsc) and 
 // compiles based on a tsconfig.json file that is present in
 // the root of the folder open in VSCode
