removed lots of compiled js files, trimmed scopes in ng-repeats

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
 	"compilerOptions": {
 		"module" : "amd",
-		"target" : "ES5"
+		"target" : "ES5",
+		"out" : "./release/app.js"
 	},
 	"files": [
 		"./all.d.ts"
